@@ -1137,6 +1137,9 @@ textarea#description {
 .suppressVisualEditor {
   display: none; }
 
+textarea.mce_editable {
+  height: 45em; }
+
 .fieldRequired {
   color: #f44;
   font-size: 0.76em;
